# cpp_introspection

include/introspection/: accessor.h  dlfcn.h  forwards.h  introspection.h  os_types.h  package.h
src/: CMakeLists.txt  dlfcn.cpp  introspection.cpp
src/package/: CMakeLists.txt  field.cpp.in  message.cpp.in  package.cpp.in
